Closed Bug 1021209 Opened 10 years ago Closed 10 years ago

Latin1 strings: fix QuoteString

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: jandem, Assigned: jandem)

References

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
More low-hanging fruit. I also removed some old cruft while I was there.
Attachment #8435177 - Flags: review?(bhackett1024)
Attachment #8435177 - Flags: review?(bhackett1024) → review+
https://hg.mozilla.org/mozilla-central/rev/b68a8421c642
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: