Bug 1021209 - Make QuoteString support Latin1 strings. r=bhackett