js/src/jit-test/tests/latin1/quote.js
@@ -1,0 +1,7 @@
+var s = toLatin1('Abc1234"\'\t987\u00ff');
+assertEq(s.toSource(), '(new String("Abc1234\\"\'\\t987\\xFF"))');
+assertEq(s.quote(), '"Abc1234\\"\'\\t987\\xFF"');
+
+s = 'Abc1234"\'\t\u1200987\u00ff';
+assertEq(s.toSource(), '(new String("Abc1234\\"\'\\t\\u1200987\\xFF"))');
+assertEq(s.quote(), '"Abc1234\\"\'\\t\\u1200987\\xFF"');
